--- a/presentacion.tex
+++ b/presentacion.tex
@@ -98,7 +98,7 @@ $$
 $$
 \end{frame}
 
-\begin{frame}{Automorfismos del grupo de Heisenberg}
+\begin{frame}{Automorfismos del álgebra de Heisenberg}
  \begin{definition}
  Recordemos que un automorfismo de álgebras de Lie $\alpha: \mathfrak{h}_n \mapsto \mathfrak{h}_n$ es un isomorfismo lineal tal que 
  $$\begin{aligned}
@@ -114,7 +114,7 @@ $$
 
 \end{frame}
 
-\begin{frame}{Automorfismos del grupo de Heisenberg}
+\begin{frame}{Automorfismos del álgebra de Heisenberg}
 $$\alpha=
 \begin{bmatrix}
 A & c\\
@@ -129,7 +129,7 @@ con $A \in  \mathbb{R}^{2n} \times \mathbb{R}^{2n}$, $a \in \mathbb{R}$, $b,c \i
 \end{itemize}
 \end{frame}
 
-\begin{frame}{Automorfismos del grupo de Heisenberg}
+\begin{frame}{Automorfismos del álgebra de Heisenberg}
 Caso $a>0$:
  $$\alpha=
  \begin{bmatrix}
@@ -244,7 +244,7 @@ Esto motiva la siguiente definición:
  $$D(\ell):=<e_1,....e_n,l_1 e_{n+1},l_2 e_{n+2}...,l_n e_{2n}>$$
   
  
- Se ve facilmente que $\psi(e_j,e_{j+n})=1$ para $j=1,...,n$
+ Se ve fácilmente que $\psi(e_j,e_{j+n})=1$ para $j=1,...,n$
 \end{example}
 \end{frame}
 
