small mod in order to make it more comprenhesive

--- a/presentacion.tex
+++ b/presentacion.tex
@@ -167,7 +167,7 @@ $$
 
 Con, 
 \begin{itemize}
-\item $\delta_a (v,t) :=(a v,a^2 t)$
+\item $\delta_{a^{1/2}} (v,t) :=(a^\frac{1}{2} v,a t)$
 \item $\theta(v,t):=(\overline{v},-t)$
 \end{itemize}
 \end{frame}
