--- a/presentacion.tex
+++ b/presentacion.tex
@@ -60,7 +60,7 @@ $$
 
 De ahora en adelante, sea $\psi :\mathbb{R}^{2n} \times \mathbb{R}^{2n}\mapsto \mathbb{R}$ dada por 
 $$ \begin{aligned}
-\psi((x,y),(x',y'))=x.y'-y.x' ,
+\psi((x,y),(x',y'))=y.x' - x.y' ,
 \end{aligned}$$
 donde $x,y,x',y' \in \mathbb{R}^n$ con  $x.y$ el producto escalar usual de $\mathbb{R}^n$.
 \end{frame}
