--- a/presentacion.tex
+++ b/presentacion.tex
@@ -178,13 +178,13 @@ Con,
 \end{definition}
 
 \begin{definition}
- Llamaremos una lattice de $\mathbb{H}_n$, a un subgrupo discreto $\Gamma$ de $\mathbb{H}_n$ tal que $\mathbb{H}_n/\Gamma$ es compacto.
+ Llamaremos una lattice de $\mathbb{H}_n$ a un subgrupo discreto $\Gamma$ de $\mathbb{H}_n$ tal que $\mathbb{H}_n/\Gamma$ es compacto.
 \end{definition}
 
 \end{frame}
 
 \begin{frame}
- Notemos, que  $\Gamma \cap Z$ es un subgrupo discreto, no trivial, de $Z$ y 
+ Notemos que  $\Gamma \cap Z$ es un subgrupo discreto, no trivial, de $Z$ y 
 por ende existe un único real positivo $\beta(\Gamma)$ tal que:
 $$
 \Gamma \cap Z=\{(0,\beta(\Gamma) m : m \in \mathbb{Z}\}.
@@ -217,9 +217,9 @@ Esto motiva la siguiente definición:
 \end{lemma}
 
 \begin{lemma} \label{1.8}
- Un $D \in HL(\mathbb{C}^n)$ se puede escribir como una suma directa $\psi-ortogonal : D=<v_1,v_1'>\oplus<v_2,v_2'>...<v_n,v_n'>$
+ Un $D \in HL(\mathbb{C}^n)$ se puede escribir como una suma directa $\psi-ortogonal : D=<v_1,v_1'>\oplus<v_2,v_2'>\oplus...\oplus<v_n,v_n'>$
  de $\mathbb{Z}$-módulos bidimensionales $<v_j,v_j'>$. Sea $l_j=\psi(v_j,v_j')$. Entonces la descomposición puede ser tomada 
- de forma tal que $l_j \in \mathbb{R}^{>0}$ y $\frac{l_{j+1}}{l_j}  \in \mathbb{Z}$.
+ de forma tal que $l_j \in \mathbb{N}$ y $\frac{l_{j+1}}{l_j}  \in \mathbb{Z}$.
  
  Es más, estos $l_j$ están unívocamente determinados por D.
 \end{lemma}
@@ -239,12 +239,15 @@ Esto motiva la siguiente definición:
  Definimos,
  $$Z_n^{\#}:= \{ \ell=(l_1,l_2,...,l_n) \in \mathbb{N}^n:l_j|l_{j+1} \}$$
  
- Sea $e_j$, $1\leq j \leq 2n $,  la base canónica de $\mathbb{R}^{2n}$.Para $\ell$, definimos:
+ Sea $e_j$, $1\leq j \leq 2n $,  la base canónica de $\mathbb{R}^{2n}$.
+ Se ve fácilmente que $\psi(e_j,e_{j+n})=1$ para $j=1,...,n$.
+ 
+ Para $\ell$, definimos:
  
  $$D(\ell):=<e_1,....e_n,l_1 e_{n+1},l_2 e_{n+2}...,l_n e_{2n}>$$
   
  
- Se ve fácilmente que $\psi(e_j,e_{j+n})=1$ para $j=1,...,n$
+ 
 \end{example}
 \end{frame}
 
