small change for better explanation

--- a/presentacion.tex
+++ b/presentacion.tex
@@ -217,7 +217,7 @@ Esto motiva la siguiente definición:
 \end{lemma}
 
 \begin{lemma} \label{1.8}
- Un $D \in HL(\mathbb{C}^n)$ se puede escribir como una suma directa $\psi-ortogonal : D=<v_1,v_1'>\oplus<v_2,v_2'>\oplus...\oplus<v_n,v_n'>$
+ Un $D \in HL(\mathbb{C}^n)$ tal que $\psi(D,D)\subseteq \mathbb{Z}$ se puede escribir como una suma directa $\psi-ortogonal : D=<v_1,v_1'>\oplus<v_2,v_2'>\oplus...\oplus<v_n,v_n'>$
  de $\mathbb{Z}$-módulos bidimensionales $<v_j,v_j'>$. Sea $l_j=\psi(v_j,v_j')$. Entonces la descomposición puede ser tomada 
  de forma tal que $l_j \in \mathbb{N}$ y $\frac{l_{j+1}}{l_j}  \in \mathbb{Z}$.
  
