--- a/presentacion.tex
+++ b/presentacion.tex
@@ -217,11 +217,11 @@ Esto motiva la siguiente definición:
 \end{lemma}
 
 \begin{lemma} \label{1.8}
- Un $D \in HL(\mathbb{C}^n)$ tal que $\psi(D,D)\subseteq \mathbb{Z}$ se puede escribir como una suma directa $\psi-ortogonal : D=<v_1,v_1'>\oplus<v_2,v_2'>\oplus...\oplus<v_n,v_n'>$
- de $\mathbb{Z}$-módulos bidimensionales $<v_j,v_j'>$. Sea $l_j=\psi(v_j,v_j')$. Entonces la descomposición puede ser tomada 
- de forma tal que $l_j \in \mathbb{N}$ y $\frac{l_{j+1}}{l_j}  \in \mathbb{Z}$.
+ Un $D \in HL(\mathbb{C}^n)$ se puede escribir como una suma directa $\psi-ortogonal : D=<v_1,v_1'>\oplus<v_2,v_2'>\oplus...\oplus<v_n,v_n'>$
+ de $\mathbb{Z}$-módulos bidimensionales $<v_j,v_j'>$. Sea $r_j=\psi(v_j,v_j')$. Entonces la descomposición puede ser tomada 
+ de forma tal que $r_j \in \mathbb{R}^{>0}$ y $\frac{r_{j+1}}{r_j}  \in \mathbb{Z}$.
  
- Es más, estos $l_j$ están unívocamente determinados por D.
+ Es más, estos $r_j$ están unívocamente determinados por D.
 \end{lemma}
 
 \end{frame}
