front cover and aesthetics

--- a/tf.tex
+++ b/tf.tex
@@ -1,5 +1,6 @@
 \documentclass[12pt]{article}
 \usepackage[spanish]{babel}
+%\usepackage{t1enc}
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{color}
@@ -15,16 +16,37 @@
 \newtheorem{definition}{Definición}
 \newenvironment{proof}{\paragraph{Demostración:}}{\hfill$\square$}
 
-\author{ Alumno: Exequiel Aguirre \\ Directora: Dra. Linda V. Saal}
-\title{Subgrupos discretos del grupo de Heisenberg }
-\date{Julio de 2014}
-
+\author{}
+\title{\Huge{Subgrupos discretos del grupo de Heisenberg} }
+\date{}
 \makeindex
 % document start
 \begin{document}
 \maketitle
+\vspace{100px}
+\thispagestyle{empty}
+\begin{center}
+\begin{large}
+Autor: Exequiel Aguirre \\ 
+Directora: Dra. Linda V. Saal\\
+\end{large}
+\vspace{100px}
 
-\begin{abstract}
+UNIVERSIDAD NACIONAL DE CÓRDOBA\\
+
+\vspace{25px}
+
+
+Córdoba, Julio de 2014\\
+FaMAF - UNC 2014\\
+
+\end{center}
+
+\clearpage
+\newpage\null\thispagestyle{empty}\newpage
+
+
+\section*{Resumen}
 La teoría de series de Fourier es la versión clásica del análisis armónico en el toro,
 $\mathbb{R}^n /\mathbb{Z}^n$, donde $\mathbb{Z}^n$ denota el subgrupo discreto de $\mathbb{R}^n$ de
 las n-uplas de números enteros.
@@ -35,21 +57,20 @@ denota un subgrupo discreto de $\mathbb{H}_n$. Ver \cite{Th}
 
 El objetivo de este trabajo es estudiar la descripción hecha por R. Tolimieri \cite{To} de los subgrupos discretos
 del grupo de Heisenberg.
-\end{abstract}
 
-\textbf{Palabras Clave:} Heisenberg,Lattice,grupos discretos
+\bigskip\bigskip\bigskip
+\textbf{Palabras Clave:} Heisenberg, Lattice, grupos discretos
+
+\bigskip
+\textbf{Código de clasificación:} 22E40, 22E25
 
 
-\textbf{Código de clasificación:}
 
 \clearpage
 \tableofcontents
 \clearpage
 
-\textbf{Notación}
-\newline
-
-
+\section*{Notación}
 \begin{tabular}{ l l }
   $GL(2n,\mathbb{R})$ & Grupo simpléctico\\
   $\mathfrak{h}_n$ & Álgebra de Heisenberg \\
