--- a/tf.tex
+++ b/tf.tex
@@ -59,7 +59,7 @@ El objetivo de este trabajo es estudiar la descripción hecha por R. Tolimieri \
 del grupo de Heisenberg.
 
 \bigskip\bigskip\bigskip
-\textbf{Palabras Clave:} Heisenberg, Lattice, grupos discretos
+\textbf{Palabras Clave:} Heisenberg, lattice, grupos discretos
 
 \bigskip
 \textbf{Código de clasificación:} 22E40, 22E25
@@ -173,7 +173,7 @@ Afirmación 2: Se tiene que  $V = P_1 \oplus P_1^{\bot}$
  Definimos 
  $$v_1:=\psi(v,f_1)e_1-\psi(v,e_1)f_1$$
  $$v_2:=v-v_1$$
- Notar que $v_1 \in <e_1,f_1>=P_1$ y $v_2 \in P_1^{\bot}$, pues 
+ Notar que $v_1 \in P_1$ y $v_2 \in P_1^{\bot}$, pues 
  
  $$\begin{aligned}
  \psi(v_2,e_1)=\psi(v,e_1)-\psi(v_1,e_1)=&\\
@@ -192,9 +192,9 @@ Afirmación 2: Se tiene que  $V = P_1 \oplus P_1^{\bot}$
  con lo cual, $\psi(\tilde{v},v)=0$ $\forall v \in V=P_1 + P_1^{\bot}$
  
  
-Hemos visto que, $V=P_1 \oplus P_1^{\bot}$, con $P_1^{\bot}=\{v \in V : \psi(v,e_1)=0=\psi(v,f_1)\}$
+Hemos visto que, $V=P_1 \oplus P_1^{\bot}$, con $P_1^{\bot}=\{v \in V : \psi(v,e_1)=0=\psi(v,f_1)\}$.
 
-Por inducción, aplicamos la hipótesis a $\psi|_{P_1^{\bot}}$ obteniendo los pares $(e_i,f_i)$ con $i \in \mathbb{N}$
+Por inducción, aplicamos la hipótesis a $\psi|_{P_1^{\bot}}$ obteniendo los pares $(e_i,f_i)$ con $i \in \mathbb{N}$.
 
 Como $V$ tiene dimensión finita, existe un $n \in \mathbb{N}$ tal que  $\beta=\{e_1,f_1,...,e_n,f_n\}$ es una base de $V$.
 En esta base, 
