--- a/tf.tex
+++ b/tf.tex
@@ -133,7 +133,7 @@ $\psi(v,v')=0$ $\forall v \in V \Rightarrow v' = 0$
 
 \begin{theorem} \label{Lang-8.1}
  Sea V, un espacio vectorial real de dimensión finita, $\psi$ una forma bilineal, antisimétrica, no degenerada, 
- $\psi:VxV\mapsto \mathbb{R}$. Entonces V es un espacio hiperbólico y dim(V) es par.
+ $\psi:V\times V\mapsto \mathbb{R}$. Entonces V es un espacio hiperbólico y dim(V) es par.
 \end{theorem}
 
 \begin{proof}
